feat():一、新增能力        领域	内容        认证体系	Spring Security + JWT；app_user 表；注册/登录/刷新接口；CurrentActor 贯穿全部 40+ 端点；管理员引导（admin/admin123 仅本地默认，生产用 APP_SECURITY_ADMIN_PASSWORD 覆盖）        登录前端	Login.vue + 路由守卫 + axios 拦截器；SSE 从 EventSource 改为 fetch 流式（可带认证头）；图片/文件改为授权 blob 加载        工具沙箱	ToolSandbox（会话级目录 temp/tools/{会话}/，路径穿越/符号链接拒绝）+ UrlAccessPolicy（DNS 解析后拦截私网/SSRF）；终端工具默认关闭，保留白名单+超时版本        可靠性基元	消息 status（IN_PROGRESS/COMPLETED/INTERRUPTED）+ client_request_id 幂等索引；ConversationLockManager 会话互斥；agentExecutor/ragExecutor 专用线程池        文档管理	同名知识库文档幂等替换；DELETE /agent-knowledge/documents/{id}（记录+向量+OSS 清理）